# working-parents-tax-relief-act

./: Makefile  plan.yaml  pyproject.toml  reform.json  vercel.json
frontend/: next.config.js  package-lock.json  package.json  vercel.json
frontend/__tests__/: AggregateImpact.test.tsx  HouseholdInputs.test.tsx  PolicyOverview.test.tsx  setup.ts
frontend/app/: globals.css  layout.tsx  robots.ts  sitemap.ts
frontend/app/(shell)/: layout.tsx  page.tsx
frontend/components/: AggregateImpact.tsx  ChartWatermark.tsx  CongressionalDistrictImpact.tsx  DynamicDistrictMap.tsx  Footer.tsx  Header.tsx  ImpactAnalysis.tsx  MapTypeToggle.tsx  PolicyOverview.tsx  Providers.tsx  USDistrictChoroplethMap.tsx
frontend/hooks/: useAggregateImpact.ts  useHouseholdImpact.ts
frontend/lib/: api.ts  embedding.ts  household.ts  parseCSV.ts  types.ts
frontend/public/data/: congressional_districts.csv  distributional_impact.csv  income_brackets.csv  metrics.csv  winners_losers.csv
frontend/public/data/geojson/: congressional_districts.geojson  congressional_districts_hex.geojson
scripts/: _pipeline_worker.py  compute_impacts.py  generate_district_csv.py  modal_district_pipeline.py  modal_pipeline.py  pipeline.py
tests/: __init__.py  conftest.py  test_csv_data.py  test_household.py  test_reforms.py
wptra_calc/: __init__.py  household.py  microsimulation.py  reforms.py
